# ugv_description

./: .gitignore  CMakeLists.txt  README.MD  mavproxy.txt  mavproxy_hw.txt  package.xml  setup.cfg  setup.py
arduino/: wheel_encoder_arduino.ino
config/: bridge_config.yaml  ekf.yaml  laser_filter_gz.yaml  nav2_params.yaml  scan_filters.yaml
launch/: display.launch.py  gazebo.launch.py  gui.launch.py  hw.launch.py  hw_slam.launch.py  joystick.launch.py  mavproxy.txt  nav2.launch.py  sitl_changes_commands.txt  slam.launch.py  ugv_sitl_gz.launch.py
meshes/: 360Cam_v4_1.stl  3ButtonMount_v1_1.stl  Anker_737_Power_Bank_v2_1.stl  BackLeft_1.stl  BackRight_1.stl  Chassis_1.stl  CubeFC_v1_1.stl  FrontCover_v1_1.stl  FrontLeft_1.stl  FrontLight_v1_1.stl  FrontLight_v1__1__1.stl  FrontMountFull_v1_1.stl  FrontRight_1.stl  GPSMount__1__v1_1.stl  GPS_v1_1.stl  Insta360MountwithLidar_v1_1.stl  JetsonCaseBottom_v1_1.stl  JetsonCaseTop_v1_1.stl  Jetson_Nano_v1_1.stl  KeyHolders_v3_v1_1.stl  LIPOBattery_v2_1.stl  LeftHub_1.stl  LeftSupport_v1_1.stl  MountingClipFinal_v1_1.stl  MountingClipFinal_v1__1__1.stl  MountingClipFinal_v1__2__1.stl  MountingClipFinal_v1__3__1.stl  MountingRailsL+R_v1_1.stl  Mounting_Plate_v3_v1_1.stl  Mounting_Plate_v3_v1__1__1.stl  RFD900urdf_v1_1.stl  RFDAntenna_v1_1.stl  RFDAntenna_v1__1__1.stl  RPLidarC1_v1_1.stl  RightHub__1.stl  RightSupport_v1_1.stl  Speaker_v1_1.stl  Speaker_v1__1__1.stl  TOFSensor_v3_1.stl  base_link.stl  (+1 more)
src/: ekf_switching.lua  wheel_odom.cpp
ugv_description/: ap_odom_bridge.py  cmd_vel_controller.py  gps_waypoint_logger.py  imu_data_transformer.py  imu_transformer.py  interactive_waypoint_follower.py  logged_waypoint_follower.py  map_patrol.py  navsat_data_transformer.py  new_encoder_node.py  patrol.py  pid_controller.py  (+5 more)
(+50 files in other folders)
